--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         markwon_version = "4.6.2"
         MMKV_version = "1.2.13"
         room_version = "2.4.0-beta02"
+        retrofit_version = "2.9.0"
     }
     repositories {
         mavenCentral()
