Add dynamic app color option in settings & fix display bug of status bars

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,10 +83,13 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
     implementation "androidx.navigation:navigation-compose:$navigation_compose_version"
 
+    // material-dialogs
+    implementation "io.github.vanpra.compose-material-dialogs:color:0.8.1-rc"
+
     // androidx
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha12'
+    implementation 'androidx.compose.material3:material3:1.0.0-alpha14'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation 'androidx.activity:activity-compose:1.5.0'
