--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "io.noties.markwon:ext-tasklist:$markwon_version"
     implementation "io.noties.markwon:image:$markwon_version"
     implementation "io.noties.markwon:image-glide:$markwon_version"
+    implementation "io.noties.markwon:html:$markwon_version"
 
     // icons extended
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
