--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         hilt_version = '2.42'
         markwon_version = "4.6.2"
         MMKV_version = "1.2.13"
-        room_version = "2.4.0-beta02"
+        room_version = "2.4.2"
         retrofit_version = "2.9.0"
     }
     repositories {
