--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
+            android:launchMode="singleInstance"
             android:windowSoftInputMode="adjustResize"
             android:exported="true"
             android:theme="@style/Theme.MemoryMarkdown.SplashScreen">
