Fix the bug that Author item in About page will lead to app crash; Add support for reading .txt files.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/markdown" />
+                <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
     </application>
