Add shortcut functions for inserting local images and moving foucs.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/markdown" />
                 <data android:mimeType="text/plain" />
+                <data android:mimeType="text/html" />
             </intent-filter>
         </activity>
     </application>
