--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.eynnzerr.memorymarkdown"
         minSdk 26
         targetSdk 32
-        versionCode 7
-        versionName "1.0.0-alpha07"
+        versionCode 8
+        versionName "1.0.0-beta01"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
