nothing really but I'd say I haven't been on Android developing for half a year and it's time I pick up my old job.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "com.eynnzerr.memorymarkdown"
         minSdk 26
         targetSdk 32
-        versionCode 10
-        versionName "1.0.0-beta03"
+        versionCode 11
+        versionName "1.0.0-beta04"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -91,6 +91,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:$navigation_compose_version"
 
     // androidx
+    implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.core:core-splashscreen:1.0.0-rc01"
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
